--- a/config/input.conf
+++ b/config/input.conf
@@ -7,8 +7,8 @@
 input {
     follow_mouse = 2 # 0|1|2|3
     float_switch_override_focus = 2
-    kb_layout = br
-    kb_variant = abnt2
+    kb_layout = us
+    kb_variant = intl
 
     touchpad {
         natural_scroll = true
