feat: clean animations

--- a/config/autostart.conf
+++ b/config/autostart.conf
@@ -27,3 +27,5 @@ exec-once = $idlehandler
 exec-once = ~/.config/hypr/scripts/launch_hyprpaper.sh
 # Turn off screen after X seconds of inativity
 exec-once = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+# Scaling for XWayland
+exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
