--- a/config/keybinds.conf
+++ b/config/keybinds.conf
@@ -10,6 +10,7 @@ bindd = $mainMod, RETURN, Opens your preferred terminal emulator ($terminal), ex
 bindd = $mainMod, E, Opens your preferred filemanager ($filemanager), exec, $filemanager
 bindd = $mainMod, A, Screen capture selection, exec, $capturing
 bindd = $mainMod, Q, Closes (not kill) current window, killactive,
+bindd = $mainMod SHIFT, Q, Kill Teams, exec, pkill teams
 bindd = $mainMod SHIFT, M, Exits Hyprland by terminating the user sessions, exec, loginctl terminate-user ""
 bindd = $mainMod, V, Switches current window between floating and tiling mode, togglefloating,
 bindd = $mainMod, SPACE, Runs your application launcher, exec, $applauncher
@@ -155,7 +156,6 @@ binds {
 
 # Mine
 # Printscreen
-bind = , Print, exec, grim -g "$(slurp)" ~/Imagens/Screenshot_$(date +'%Y-%m-%d-%H%M%S').png
-
+bind = , Print, exec, grim -g "$(slurp)" - | wl-copy 
 # Open firefox
 bind = $mainMod, b, exec, firefox
